update README to reflect JDK 11 actuality